<resources>
    <string name="app_name">CM-Challenge3</string>
    <string name="title_activity_main2">Leanback MainActivity2</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="control_led">Control LED</string>
    <string name="temperature_on">Temperature OFF</string>
    <string name="temperature_off">Temperature ON</string>
    <string name="humidity_on">Humidity OFF</string>
    <string name="humidity_off">Humidity ON</string>
    <string name="open_chat">Open Chat</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="turn_on_led">Turn On LED</string>
    <string name="turn_off_led">Turn Off LED</string>
    <string name="led_on">LED ON</string>
    <string name="led_off">LED OFF</string>
</resources>